# os_workspace-strothmannsm

OSS16_Assignment2/: CMakeLists.txt
OSS16_Assignment2/src/: back_store.c
OSS16_Assignment2/test/: tests.cpp
OSS16_Assignment3/: CMakeLists.txt
OSS16_Assignment3/src/: producer_consumer.c
OSS16_Project1/: CMakeLists.txt  README.md
OSS16_Project1/include/: processing_scheduling.h
OSS16_Project1/src/: analysis.c  process_scheduling.c
OSS16_Project2/src/: page_swap.c
OSS16_Project3/: CMakeLists.txt
OSS16_Project3/src/: S16FS.c
OSS16_Project3/test/: tests.cpp
OS_SP16_Learning_Modules/: CMakeLists.txt
OS_SP16_Learning_Modules/allocation/src/: allocation.c
OS_SP16_Learning_Modules/arrays/src/: arrays.c
OS_SP16_Learning_Modules/bits/src/: bitmap.c
OS_SP16_Learning_Modules/debug/src/: debug.c
OS_SP16_Learning_Modules/error_handling/src/: error_handling.c
OS_SP16_Learning_Modules/strings/src/: sstring.c
OS_SP16_Learning_Modules/structures/src/: structures.c
OS_SP16_Learning_Modules/system_programming/src/: sys_prog.c
