cmake_minimum_required (VERSION 2.8)

project(OSLearningModules)

#set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_COLOR_MAKEFILE ON)

add_subdirectory(arrays)
add_subdirectory(strings)
add_subdirectory(system_programming)
add_subdirectory(bits)
add_subdirectory(allocation)
add_subdirectory(debug)
add_subdirectory(error_handling)
add_subdirectory(structures)
